# cubecoin

./: CMakeLists.txt  README.md
src/: blockchain.cpp  blockchain.hpp  server.cpp  server.hpp  transaction.cpp  transaction.hpp
